<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="9"
    android:useDefaultMargins="true" >



    <TextView
        android:id="@+id/text_drink"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/label_phone"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_price"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:inputType="phone"
        android:maxLines="1" />

    <TextView
        android:id="@+id/text_address"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/label_address"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_location"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ems="6"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <TextView
        android:id="@+id/text_city"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/label_city"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_description"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ems="6"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <TextView
        android:id="@+id/text_zip"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/label_zip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ems="5"
        android:maxLines="1" />


    <TextView
        android:id="@+id/category_label"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Category"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ems="5"
        android:maxLines="1" />

    <TextView
        android:id="@+id/availability_label"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Available"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/availability_text"
        android:layout_width="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ems="5"
        android:maxLines="1" />


    <Button
        android:id="@+id/button_mark_sold"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Mark Sold" />

    <Button
        android:id="@+id/button_show_seller"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Show seller" />

</GridLayout>