<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/label_welcome"-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_weight="1"-->
<!--            android:textColor="@color/text_heading"-->
<!--            android:layout_gravity="top"-->
<!--            android:textSize="18sp"-->
<!--            android:padding="8dp"/>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MySellingButton"
            android:text="My Items"></Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendToFriendsButton"
            android:text="Friends"></Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_add"
            android:id="@+id/button_add"
            android:layout_gravity="top"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/button_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="History" />

        <Button
            android:id="@+id/button_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/editSearch"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="Search..."

            ></EditText>
        <Button
            android:layout_width="wrap_content"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:layout_height="35dp"
            android:textSize="7dp"
            android:text="Search"
            android:id="@+id/searchButton"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter: "></TextView>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Books"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_electronics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Electronics"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radio_clothing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clothing"
                android:onClick="onRadioButtonClicked"></RadioButton>
            <RadioButton
                android:id="@+id/radio_furniture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Furniture"
                android:onClick="onRadioButtonClicked"></RadioButton>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price: "></TextView>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_spinner"></Spinner>

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        />
</LinearLayout>