<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

​

<TextView
    android:id="@+id/textView_user_items_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:text="Title"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ListView
    android:id="@+id/listView_user_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:background="@color/colorPrimary"
    app:layout_constraintTop_toBottomOf="@+id/textView_user_items_title"
    tools:layout_editor_absoluteX="0dp" />

​
</androidx.constraintlayout.widget.ConstraintLayout>